# rust-data-processing-engine

./: Cargo.toml  README.md
examples/: api_server.rs  simple_pipeline.rs
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs  server.rs
src/data/: csv.rs  json.rs  mod.rs  parquet.rs  schema.rs
src/processing/: aggregate.rs  filter.rs  join.rs  mod.rs  stats.rs  transform.rs  window.rs
src/storage/: cache.rs  file.rs  memory.rs  mod.rs
src/utils/: config.rs  error.rs  logging.rs  mod.rs  validation.rs
tests/: test_pipeline.rs
